<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="url_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="student_email">ber9za@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_default_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="trackNotFound">Ничего не нашлось</string>
    <string name="networkError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="current_duration">00:00</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="addPlaylistSuccess">Добавлено в плейлист %s</string>
    <string name="addPlaylistError">Трек уже добавлен в плейлист %s</string>

    <!--  Медиатека  -->
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>
    <string name="confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_dialog_cancel">Отмена</string>
    <string name="confirm_dialog_done">Завершить</string>
    <string name="toast_text">Плейлист %s создан</string>
    <string name="playlist_count">треков</string>
    <string name="track_string">трек</string>

    <!-- Playlist  Item -->
    <string name="track_delete_dialog_message">Хотите удалить трек?</string>
    <string name="negative">НЕТ</string>
    <string name="positive">ДА</string>
    <string name="empty_share_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_confirm">Хотите удалить плейлист "%s"?</string>
    <string name="edit">Редактировать</string>
    <string name="empty_tracklist_text">В этом плейлисте нет треков</string>
    <string name="minute_form1">минута</string>
    <string name="minute_form2">минуты</string>
    <string name="minute_form3">минут</string>

    <plurals name="minute_plural_name">
        <item quantity="zero">"%d" минут</item>
        <item quantity="one">"%d" минута</item>
        <item quantity="few">"%d" минуты</item>
        <item quantity="many">"%d" минут</item>
        <item quantity="other">"%d" минут</item>
    </plurals>

    <plurals name="track_plural_name">
        <item quantity="zero">"%d" треков</item>
        <item quantity="one">"%d" трек</item>
        <item quantity="few">"%d" трека</item>
        <item quantity="many">"%d" треков</item>
        <item quantity="other">"%d" треков</item>
    </plurals>
</resources>