<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_size"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/gap1">
                <ImageView
                    android:id="@+id/imageBackAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    app:tint="?attr/colorOnPrimary"
                    android:foreground="?attr/selectableItemBackground"/>
                <TextView style="@style/SettingsHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:paddingStart="@dimen/padding_size"/>
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat style="@style/SettingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:paddingBottom="@dimen/gap1"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/gap1">
                <TextView style="@style/SettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share"
                    android:layout_gravity="end"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/gap1">
                <TextView style="@style/SettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/support"
                    android:layout_gravity="end" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/gap1">
                <TextView style="@style/SettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_agreement" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_forward"
                    android:layout_gravity="end"/>
        </FrameLayout>

</LinearLayout>