<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".ui.media.fragments.playlists.AddPlaylistFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_header_start"
            android:layout_marginTop="@dimen/padding_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingEnd="@dimen/padding_header_start"
            android:src="@drawable/arrow_back"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/PanelHeader"
            android:layout_marginStart="@dimen/padding_header_start"
            android:text="@string/new_playlist"
            app:layout_constraintBottom_toBottomOf="@id/backArrow"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="@id/backArrow" />

        <ImageView
            android:id="@+id/addPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/btn_margin_ic"
            android:src="@drawable/add_picture"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/ap_gap1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backArrow" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputEditTextCustomStroke"
            android:id="@+id/inputNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_text_start_margin"
            android:layout_marginTop="@dimen/input_text_top_margin"
            android:layout_marginEnd="@dimen/input_text_start_margin"
            app:cursorColor="@color/yp_blue"
            android:hint="@string/playlist_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputEditTextCustomStroke"
            android:id="@+id/descriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size"
            android:layout_marginTop="@dimen/padding_size"
            android:layout_marginEnd="@dimen/padding_size"
            app:cursorColor="@color/yp_blue"
            android:hint="@string/description"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputNameLayout"
            app:layout_constraintBottom_toTopOf="@id/buttonSave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInputEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_text_height"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_bottom"
            android:layout_marginStart="@dimen/padding_size"
            android:layout_marginEnd="@dimen/padding_size"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@drawable/save_button"
            android:enabled="false"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>