<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.audioPlayer.fragment.AudioPlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_inner_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_inner_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92" />

            <ImageButton
                android:id="@+id/buttonBack"
                style="@style/PanelHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/arrow_back"
                />

            <ImageView
                android:id="@+id/artworkUrl100"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="82dp"
                tools:src="@drawable/ic_album_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/left_inner_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_inner_guideline"
                app:layout_constraintDimensionRatio="h,1:1"/>

            <TextView
                android:id="@+id/trackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ap_gap1"
                app:layout_constraintTop_toBottomOf="@id/artworkUrl100"
                app:layout_constraintStart_toStartOf="@id/left_inner_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_inner_guideline"
                tools:text="Yesterday (Remastered 2009)"
                android:textSize="@dimen/main_text_size"
                android:fontFamily="@font/ys_text_medium"
                android:textColor="?attr/colorOnSecondary"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ap_margin"
                android:layout_marginTop="@dimen/icon_padding"
                app:layout_constraintStart_toStartOf="@id/left_inner_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_inner_guideline"
                app:layout_constraintTop_toBottomOf="@id/trackName"
                tools:text="The Beatles"
                android:textSize="@dimen/ap_14sp"
                android:fontFamily="@font/ys_text_medium"
                android:textColor="?attr/colorOnSecondary"
                android:maxLines="1"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/left_inner_guideline"
                app:layout_constraintEnd_toStartOf="@id/buttonPlay"
                app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
                app:layout_constraintTop_toTopOf="@id/buttonPlay"
                android:src="@drawable/button_add" />

            <ImageView
                android:id="@+id/buttonPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ap_gap1"
                app:layout_constraintStart_toEndOf="@id/buttonAdd"
                app:layout_constraintEnd_toStartOf="@id/buttonLike"
                app:layout_constraintTop_toBottomOf="@id/artistName"
                android:src="@drawable/button_play" />

            <ImageView
                android:id="@+id/buttonLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/buttonPlay"
                app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
                app:layout_constraintTop_toTopOf="@id/buttonPlay"
                app:layout_constraintEnd_toEndOf="@id/right_inner_guideline"
                android:src="@drawable/button_like_inactive" />

            <TextView
                android:id="@+id/currentDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ap_margin"
                app:layout_constraintStart_toStartOf="@id/buttonPlay"
                app:layout_constraintEnd_toEndOf="@id/buttonPlay"
                app:layout_constraintTop_toBottomOf="@id/buttonPlay"
                tools:text="0:30"
                android:textSize="@dimen/ap_14sp"
                android:fontFamily="@font/ys_text_medium"
                android:textColor="?attr/colorOnSecondary"/>

            <TextView style="@style/TextInfo"
                android:id="@+id/textDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ap_gap"
                android:text="@string/duration"
                app:layout_constraintTop_toBottomOf="@id/currentDuration"
                app:layout_constraintStart_toEndOf="@id/left_guideline"/>

            <TextView style="@style/TextInfo"
                android:id="@+id/textAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_text_margin"
                app:layout_constraintTop_toBottomOf="@id/textDuration"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                android:text="@string/album" />

            <TextView style="@style/TextInfo"
                android:id="@+id/textYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_text_margin"
                app:layout_constraintTop_toBottomOf="@id/textAlbum"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                android:text="@string/year" />

            <TextView style="@style/TextInfo"
                android:id="@+id/textGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_text_margin"
                app:layout_constraintTop_toBottomOf="@id/textYear"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                android:text="@string/genre" />

            <TextView style="@style/TextInfo"
                android:id="@+id/textCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_text_margin"
                android:layout_marginBottom="@dimen/ap_margin"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/textGenre"
                android:text="@string/country" />

            <TextView style="@style/Info"
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintBottom_toBottomOf="@id/textDuration"
                tools:text="5:35" />

            <TextView style="@style/Info"
                android:id="@+id/album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ap_margin"
                app:layout_constraintStart_toEndOf="@id/textDuration"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintBottom_toBottomOf="@id/textAlbum"
                tools:text="Yesterday (Remastered 2009)"
                android:gravity="end"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView style="@style/Info"
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintBottom_toBottomOf="@id/textYear"
                tools:text="1965" />

            <TextView style="@style/Info"
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintBottom_toBottomOf="@id/textGenre"
                tools:text="Rock" />

            <TextView style="@style/Info"
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintBottom_toBottomOf="@id/textCountry"
                tools:text="Великобритания" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_bg"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />
        <TextView style="@style/BottomSheetHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_playlist"
            android:layout_marginTop="@dimen/ap_gap" />
        <Button style="@style/RefreshButtonSearch"
            android:id="@+id/newPlaylistButton"
            android:layout_marginTop="@dimen/ap_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist_btn" />
        <ProgressBar
            android:id="@+id/search_progressbar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="gone" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottomRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ap_gap1"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>